docs/build/identity.rs/1.0-rc.1/docs/how-tos/decentralized-identifiers/update.mdx
---
sidebar_label: Update
description: How DID Documents can be manipulated and how updates should be published
image: /img/Identity_icon.png
keywords:
  - Documents
  - DID
  - Tangle
  - Update
  - Publish
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

# Update DID Documents

You can extend DID Documents by adding [verification methods](#verification-methods), [services](#services) and custom properties.
A verification method adds public keys, which can be used to digitally sign things like a DID message or a verifiable credential,
while a service can provide metadata around the identity via URIs.

## Verification Methods

As demonstrated by the [example](#example) below, the IOTA Identity framework offers easy-to-use methods for adding
[verification methods](https://www.w3.org/TR/did-core/#verification-methods).

### Properties

You can specify the following properties for a verification method:

- **id**: A [DID URL](https://www.w3.org/TR/did-core/#did-url-syntax) for the verification method. You can specify it by setting the [fragment](https://www.w3.org/TR/did-core/#fragment).
- **type**: Specifies the type of the verification method. The framework supports `Ed25519` and `X25519` key types. This property is automatically filled by the framework when specifying the verification material.
- **publicKeyMultibase**: A multi-base encoded public key which concludes the [verification material](https://www.w3.org/TR/did-core/#verification-material). This can be automatically generated by the framework or manually provided by users.

## Verification Relationships

[Verification relationships](https://www.w3.org/TR/did-core/#verification-relationships) express the relationship between the DID subject and the verification method.
You can use it to specify the purpose of the verification method.

### Relationships

The following relationships are supported by the Identity Framework:

- **[Authentication](https://www.w3.org/TR/did-core/#authentication)**: Used to specify authentication methods for the DID subject.
- **[Assertion](https://www.w3.org/TR/did-core/#assertion)**: Used to verify verifiable credentials.
- **[Key Agreement](https://www.w3.org/TR/did-core/#assertion)**: Used for establishing secure communication channels.
- **[Capability Invocation](https://www.w3.org/TR/did-core/#capability-invocation)**: Can be used to authorize updates to the DID Document.
- **[Capability Delegation](https://www.w3.org/TR/did-core/#capability-delegation)**: A mechanism to delegate cryptographic capability to another party.

Verification methods can be either [embedded or referenced](https://www.w3.org/TR/did-core/#referring-to-verification-methods). Referencing verification
methods allows them to be used by more than one verification relationship.
When you create a verification method using the identity framework, specifying the `MethodScope` option will result in an embedded verification method.
Leaving that option unset will create the verification method as a map entry of the `verificationMethod` property.
You can also add verification relationships afterward using references.

:::note

Updates to the DID Document are done through a state transition of the [Alias Output](../../references/specifications/iota-did-method-spec.md#alias-output) by its state controller.
The public key or address of the state controller does not need to be a verification method in the DID Document,
since it is defined in the containing Alias Output.

:::

## Services

[Services](https://www.w3.org/TR/did-core/#services) allow you to add other ways of communicating with the DID subject.
An endpoint included in the DID Document can offer a way of reaching services for different purposes
like authentication, communicating, and discovery.

### Properties

You can specify the following properties for a service:

- **id**: A [DID URL](https://www.w3.org/TR/did-core/#did-url-syntax) for referencing the service in the DID document. You can specify it by setting the [fragment](https://www.w3.org/TR/did-core/#fragment).
- **type**: A string used to maximize interoperability between services. The framework does not perform any checks on the content of this string.
- **serviceEndpoint**: A URL that points to the service endpoint.

## Create Identity

Before you can update anything, you will need to [create an Identity](./create.mdx).

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

```rust
// Create a new client to interact with the IOTA ledger.
let client: Client = Client::builder().with_primary_node(NETWORK_ENDPOINT, None)?.finish()?;

// Create a new secret manager backed by a Stronghold.
let mut secret_manager: SecretManager = SecretManager::Stronghold(
StrongholdSecretManager::builder()
  .password("secure_password")
  .build(random_stronghold_path())?,
);

// Create a new DID in an Alias Output for us to modify.
let (_, did): (Address, StardustDID) = create_did(&client, &mut secret_manager).await?;
```

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

```js
const { didClient, secretManager, did } = await createIdentity();
```

</TabItem>
</Tabs>

This creates and publishes an Alias Output containing a DID Document with one verification method.

```json
{
  "doc": {
    "id": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483",
    "verificationMethod": [
      {
        "id": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483#key-1",
        "controller": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483",
        "type": "Ed25519VerificationKey2018",
        "publicKeyMultibase": "z94fP8Vo6qJtejpycjUcYtiSTbLGuCNYUTrjQX9hT2gSv"
      }
    ]
  },
  "meta": {
    "created": "2022-09-12T21:58:06Z",
    "updated": "2022-09-12T21:58:06Z"
  }
}
```

## Add a Verification Method

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

```rust
  // Insert a new Ed25519 verification method in the DID document.
  let keypair: KeyPair = KeyPair::new(KeyType::Ed25519)?;
  let method: IotaVerificationMethod =
    IotaVerificationMethod::new(document.id().clone(), keypair.type_(), keypair.public(), "#key-2")?;
  document.insert_method(method, MethodScope::VerificationMethod)?;
```

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

```js
// Insert a new Ed25519 verification method in the DID document.
let keypair = new KeyPair(KeyType.Ed25519);
let method = new IotaVerificationMethod(
  document.id(),
  keypair.type(),
  keypair.public(),
  '#key-2',
);
document.insertMethod(method, MethodScope.VerificationMethod());
```

</TabItem>
</Tabs>

This creates a new verification method that includes a newly generated Ed25519 public key.

```json
{
  "doc": {
    "id": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483",
    "verificationMethod": [
      {
        "id": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483#key-1",
        "controller": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483",
        "type": "Ed25519VerificationKey2018",
        "publicKeyMultibase": "z94fP8Vo6qJtejpycjUcYtiSTbLGuCNYUTrjQX9hT2gSv"
      },
      {
        "id": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483#key-2",
        "controller": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483",
        "type": "Ed25519VerificationKey2018",
        "publicKeyMultibase": "zHiCj7kbZdWznNvBhqxXwgoEChYseKrArLFdi5kPKAVRq"
      }
    ]
  },
  "meta": {
    "created": "2022-09-12T21:58:06Z",
    "updated": "2022-09-12T21:58:06Z"
  }
}
```

Notice that these changes to the document are not [published](#publish-your-updates) yet.

## Add Verification Relationships

You can attach verification relationships to a verification method by referencing its fragment.

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

```rust
// Attach a new method relationship to the existing method.
document.attach_method_relationship(
    &document.id().to_url().join("#key-1")?,
    MethodRelationship::Authentication,
)?;
```

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

```js
// Attach a new method relationship to the existing method.
document.attachMethodRelationship(
  did.join('#key-1'),
  MethodRelationship.Authentication,
);
```

</TabItem>
</Tabs>

This will add `Authentication` relationship to the verification method with the fragment `key-1`.
Note that `Authentication` references the already included `key-2` verification method:

```json {12,19}
{
  "doc": {
    "id": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483",
    "verificationMethod": [
      {
        "id": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483#key-1",
        "controller": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483",
        "type": "Ed25519VerificationKey2018",
        "publicKeyMultibase": "z94fP8Vo6qJtejpycjUcYtiSTbLGuCNYUTrjQX9hT2gSv"
      },
      {
        "id": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483#key-2",
        "controller": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483",
        "type": "Ed25519VerificationKey2018",
        "publicKeyMultibase": "zHiCj7kbZdWznNvBhqxXwgoEChYseKrArLFdi5kPKAVRq"
      }
    ],
    "authentication": [
      "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483#key-2"
    ]
  },
  "meta": {
    "created": "2022-09-12T21:58:06Z",
    "updated": "2022-09-12T21:58:06Z"
  }
}
```

## Add a Service

You can also add custom properties can to a service by setting `properties`:

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

```rust
// Add a new Service.
let service: StardustService = Service::from_json_value(json!({
    "id": document.id().to_url().join("#linked-domain")?,
    "type": "LinkedDomains",
    "serviceEndpoint": "https://iota.org/"
}))?;
assert!(document.insert_service(service));
document.metadata.updated = Some(Timestamp::now_utc());
```

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

```js
// Add a new Service.
const service: StardustService = new StardustService({
  id: did.join('#linked-domain'),
  type: 'LinkedDomains',
  serviceEndpoint: 'https://iota.org/',
});
document.insertService(service);
document.setMetadataUpdated(Timestamp.nowUTC());
```

</TabItem>
</Tabs>

The updated Document with the newly created service looks as follows.

```json {21-27}
{
  "doc": {
    "id": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483",
    "verificationMethod": [
      {
        "id": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483#key-1",
        "controller": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483",
        "type": "Ed25519VerificationKey2018",
        "publicKeyMultibase": "z94fP8Vo6qJtejpycjUcYtiSTbLGuCNYUTrjQX9hT2gSv"
      },
      {
        "id": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483#key-2",
        "controller": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483",
        "type": "Ed25519VerificationKey2018",
        "publicKeyMultibase": "zHiCj7kbZdWznNvBhqxXwgoEChYseKrArLFdi5kPKAVRq"
      }
    ],
    "authentication": [
      "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483#key-2"
    ],
    "service": [
      {
        "id": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483#linked-domain",
        "type": "LinkedDomains",
        "serviceEndpoint": "https://iota.org/"
      }
    ]
  },
  "meta": {
    "created": "2022-09-12T21:58:06Z",
    "updated": "2022-09-12T21:58:19Z"
  }
}
```

## Remove a Verification Method

You can also remove verification methods at any time using the following snippet:

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

```rust
// Remove a verification method.
let original_method: DIDUrl<IotaDID> = document.resolve_method("key-1", None).unwrap().id().clone();
document.remove_method(&original_method).unwrap();
```

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

```js
// Remove a verification method.
let originalMethod = document.resolveMethod("key-1") as IotaVerificationMethod;
document.removeMethod(originalMethod?.id());
```

</TabItem>
</Tabs>

This removes the original verification method with the fragment `key-1`.

```json
{
  "doc": {
    "id": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483",
    "verificationMethod": [
      {
        "id": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483#key-2",
        "controller": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483",
        "type": "Ed25519VerificationKey2018",
        "publicKeyMultibase": "zHiCj7kbZdWznNvBhqxXwgoEChYseKrArLFdi5kPKAVRq"
      }
    ],
    "authentication": [
      "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483#key-2"
    ],
    "service": [
      {
        "id": "did:iota:rms:0x6fdcc441ab461aaee2ec1837ea5068fe2bc643a9ac0729a055ef5df42a762483#linked-domain",
        "type": "LinkedDomains",
        "serviceEndpoint": "https://iota.org/"
      }
    ]
  },
  "meta": {
    "created": "2022-09-12T21:58:06Z",
    "updated": "2022-09-12T21:58:19Z"
  }
}
```

## Publish Your Updates

Publish the updated DID Document inside the Alias Output taking into account the increase in the storage deposit needed.

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

```rust
// Resolve the latest output and update it with the given document.
let alias_output: AliasOutput = client.update_did_output(document.clone()).await?;

// Because the size of the DID document increased, we have to increase the allocated storage deposit.
// This increases the deposit amount to the new minimum.
let rent_structure: RentStructure = client.get_rent_structure().await?;
let alias_output: AliasOutput = AliasOutputBuilder::from(&alias_output)
  .with_minimum_storage_deposit(rent_structure)
  .finish()?;

// Publish the updated Alias Output.
let updated: StardustDocument = client.publish_did_output(&secret_manager, alias_output).await?;
```

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

```js
// Resolve the latest output and update it with the given document.
const aliasOutput: IAliasOutput = await didClient.updateDidOutput(document);

// Because the size of the DID document increased, we have to increase the allocated storage deposit.
// This increases the deposit amount to the new minimum.
const rentStructure: IRent = await didClient.getRentStructure();
aliasOutput.amount = TransactionHelper.getStorageDeposit(
  aliasOutput,
  rentStructure,
).toString();

// Publish the output.
const updated: StardustDocument = await didClient.publishDidOutput(
  secretManager,
  aliasOutput,
);
```

</TabItem>
</Tabs>

## Full Example Code

<Tabs groupId="language" queryString>
<TabItem value="rust" label="Rust">

```rust reference
https://github.com/iotaledger/identity.rs/blob/main/examples/0_basic/1_update_did.rs
```

</TabItem>
<TabItem value="typescript-node" label="Typescript (Node.js)">

```ts reference
https://github.com/iotaledger/identity.rs/blob/main/bindings/wasm/examples/src/0_basic/1_update_did.ts
```

</TabItem>
</Tabs>